--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,93 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+.list-box-header h2 {
+  font-size: 30px;
+  font-weight: 700;
+  color: #fff;
+}
+
+.list-box-header p {
+  font-size: 14px;
+}
+
+.list-box-header {
+  background-color: #32cfb8;
+  padding: 10px;
+  box-shadow: 0px 10px 10px 0px #00000010;
+  z-index: 1;
+  position: relative;
+}
+
+.list-box-Body {
+  padding: 50px;
+  background-color: #f6f6f6;
+  min-height: calc(100vh - 86px);
+}
+
+.todo-item {
+  display: flex;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 0px #00000010;
+}
+
+.todo-item {
+  display: flex;
+  background-color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 0px 10px 0px #00000010;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.todo-icons img {
+  width: 25px;
+}
+
+
+.todo-item .todo-heading {
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.todo-add {
+  padding: 10px;
+  background-color: #32cfb8;
+  border-radius: 5px;
+}
+
+.todo-add input {
+  background-color: transparent;
+  outline: none;
+  color: #fff;
+}
+
+.todo-add input::placeholder {
+  color: #c9dcdc;
+}
+
+.todo-add button {
+  background-color: #fff;
+  font-size: 12px;
+  padding: 5px 30px;
+  border-radius: 5px;
+  border: 1px solid #fff;
+  font-weight: 500;
+  color: #000;
+  transition: all 0.3s ease-in-out;
+}
+
+.todo-add button:hover {
+  background-color: #32cfb8;
+  color: #fff;
+}
