--- a/src/index.css
+++ b/src/index.css
@@ -16,6 +16,7 @@
 
 .list-box-header p {
   font-size: 14px;
+  color: #fff;
 }
 
 .list-box-header {
@@ -90,4 +91,17 @@
 .todo-add button:hover {
   background-color: #32cfb8;
   color: #fff;
+}
+
+.todo-edit {
+  position: absolute;
+  width: 80%;
+  top: 50%;
+  margin: auto;
+  padding: 10px;
+  background-color: #32cfb8;
+  border-radius: 5px;
+  box-shadow: 0px 0px 0px 1000px #00000020;
+  left: 0;
+  right: 0;
 }
