--- a/src/index.css
+++ b/src/index.css
@@ -105,3 +105,33 @@
   left: 0;
   right: 0;
 }
+
+.more-box {
+  position: absolute;
+  background-color: #32cfb8;
+  padding: 10px;
+  border-radius: 10px;
+  left: -110px;
+  top: 0;
+}
+
+.more-box ul li {
+    font-size: 12px;
+    color: #fff;
+    border-radius: 20px;
+    padding: 2px 5px;
+    font-weight: 600;
+    margin-bottom: 5px;
+    transition: all 0.3s ease;
+}
+
+.more-box ul li:last-child {
+  margin-bottom: 0px;
+}
+
+.more-box ul li:hover {
+  font-size: 12px;
+  color: #32cfb8;
+  background-color: #fff;
+}
+
